file_glob_enabled_language_files()

add_library(WINVQM32 STATIC)
target_link_libraries(WINVQM32 PUBLIC WINVQ_INCLUDE)
target_compile_definitions(WINVQM32
  PUBLIC
    PHARLAP_TNT=0
)
target_include_directories(WINVQM32
  PUBLIC
    ../INCLUDE/VQM32
)
# temporarily disable specific sources
list(
  REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_CXX_SOURCE_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/VIDEO.CPP"
  "${CMAKE_CURRENT_SOURCE_DIR}/VESAVID.CPP"
)
list(
  REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/VIDEO.CPP"
  "${CMAKE_CURRENT_SOURCE_DIR}/VESAVID.CPP"
)
target_sources(WINVQM32
  PRIVATE ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES}
)
target_sources(WINVQM32
  PRIVATE
    FILE_SET private_headers
    TYPE HEADERS
    FILES ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_IGNORES}
)
target_sources(WINVQM32
  PUBLIC
    FILE_SET HEADERS
    BASE_DIRS ../INCLUDE
    FILES
      ${PROJECT_WINVQ_INCLUDE_ANY_LANG_IGNORES}
      ${PROJECT_WINVQM32_INCLUDE_ANY_LANG_IGNORES}
)
if(USE_WINVQ_AS_VQ)
add_library(VQM32 ALIAS WINVQM32)
endif(USE_WINVQ_AS_VQ)

set_asm_masm_source_files_language_property()
