include(project_component_helpers)
cmake_path(GET CMAKE_CURRENT_SOURCE_DIR FILENAME PROJECT_COMPONENT_SUBDIR_NAME)
string(JOIN "_" PROJECT_COMPONENT_NAME
  ${PROJECT_COMPONENT_NAME}
  ${PROJECT_COMPONENT_SUBDIR_NAME}
)
project_component(EXECUTABLE)
target_include_directories(${PROJECT_COMPONENT_NAME} PUBLIC
  ${PROJECT_COMPONENT_ROOT_INCLUDE_DIR}
)
target_link_libraries(${PROJECT_COMPONENT_NAME} PRIVATE
  ${PROJECT_COMPONENT_ROOT_NAME}
)
