file_glob_enabled_language_files()
list(
  REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_CXX_SOURCE_FILES
   "${CMAKE_CURRENT_SOURCE_DIR}/TEST.CPP"
   "${CMAKE_CURRENT_SOURCE_DIR}/TST.CPP"
)
list(
  REMOVE_ITEM PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES
   "${CMAKE_CURRENT_SOURCE_DIR}/TEST.CPP"
   "${CMAKE_CURRENT_SOURCE_DIR}/TST.CPP"
)

add_library(WIN32LIB_AUDIO_OLD STATIC EXCLUDE_FROM_ALL)
target_link_libraries(WIN32LIB_AUDIO_OLD
  PUBLIC
    WIN32LIB_INCLUDE
)
target_sources(WIN32LIB_AUDIO_OLD
  PRIVATE
    ${PROJECT_CURRENT_SOURCE_DIR_ANY_LANG_SOURCE_FILES}
)
target_sources(WIN32LIB_AUDIO_OLD
  PRIVATE
    FILE_SET HEADERS
    BASE_DIRS ../../INCLUDE
    FILES ${PROJECT_WIN32LIB_INCLUDE_ANY_LANG_IGNORES}
)

add_executable(WIN32LIB_AUDIO_OLD_TEST WIN32 EXCLUDE_FROM_ALL "TEST.CPP")
target_link_libraries(WIN32LIB_AUDIO_OLD_TEST PRIVATE WIN32LIB_AUDIO)

add_executable(WIN32LIB_AUDIO_OLD_TST EXCLUDE_FROM_ALL "TST.CPP")
target_link_libraries(WIN32LIB_AUDIO_OLD_TST PRIVATE WIN32LIB_AUDIO)

set_asm_masm_source_files_language_property()
